fix: adjust negative top alignment rather than use flex

--- a/source/features/ci-link.css
+++ b/source/features/ci-link.css
@@ -1,8 +1,7 @@
 .rgh-ci-link {
 	position: relative;
-	top: -0.1em;
+	top: -0.3em;
 	animation: fade-in 0.2s;
-	align-self: stretch !important;
 }
 
 .rgh-ci-link .octicon {
